Fix page transition flicker

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@
 
 html {
     font-size: 16px;
+    background-color: #ECE6DD;
 }
 
 * {
